# mcp-tester

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  program.md  pyproject.toml  tester.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-19-pre-push-hardening.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx  VerdictBadge.tsx
frontend/src/pages/: Compare.tsx  History.tsx  RunDetail.tsx  RunTests.tsx  Settings.tsx
mcp_tester/: api.py  cli.py  config.py  grader.py  llm.py  logger.py  mcp_client.py  models.py  program.py  prompts.py  runner.py
prompts/: cloud-core.yaml  location-analysis.yaml  resource-analysis.yaml  service-analysis.yaml  variance-analysis.yaml
samples/: sample-report.md
